src/0.mvn/k8s/deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: "0"
  name: mvn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mvn
  template:
    metadata:
      labels:
        app: mvn
    spec:
      volumes:
        - name: data
          hostPath:
            path: /home/0.mvn
            type: Directory
# - /usr/local/src/0.mvn/apache-archiva/archiva.xml:/usr/local/org.apache.archiva/conf/archiva.xml:ro
      containers:
        - name: mvn
          image: container.0/org.apache.archiva:latest
          imagePullPolicy: IfNotPresent
          ports:
            - {protocol: TCP, containerPort: 8080}
          volumeMounts:
            - {name: data, subPath: databases,    mountPath: /home/org.apache.archiva/data/databases}
            - {name: data, subPath: repositories, mountPath: /home/org.apache.archiva/data/repositories}

---
apiVersion: v1
kind: Service
metadata:
  namespace: "0"
  name: mvn
spec:
  type: LoadBalancer
  selector:
    app: mvn
  ports:
    - {protocol: TCP, port: 8080}

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "0"
  name: mvn
spec:
  rules:
    - host: mvn.0
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mvn
                port:
                  number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "0"
  name: mvn-ui
spec:
  rules:
    - host: mvn.${webui_tld}
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mvn
                port:
                  number: 8080
